--- a/index.html
+++ b/index.html
@@ -13,29 +13,27 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
       padding: 20px;
     }
 
     header {
       text-align: center;
+      max-width: 800px;
       margin-bottom: 40px;
     }
 
     h1 {
       font-size: 2.5em;
-      margin: 0.2em 0;
+      margin-bottom: 0.4em;
     }
 
     p {
       color: #aaa;
-      max-width: 600px;
-      margin: 0 auto;
+      font-size: 1.1em;
+      line-height: 1.6;
     }
 
     .game-container {
-      margin: 40px 0;
       width: 100%;
       max-width: 800px;
       aspect-ratio: 16 / 9;
@@ -45,17 +43,33 @@
       justify-content: center;
       border: 2px solid #444;
       border-radius: 10px;
+      overflow: hidden;
+      margin-bottom: 40px;
     }
 
     iframe, video {
       width: 100%;
       height: 100%;
       border: none;
+    }
+
+    .screenshots {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+      max-width: 800px;
+      margin-bottom: 60px;
+    }
+
+    .screenshots img {
+      width: 100%;
+      max-width: 380px;
       border-radius: 10px;
+      border: 2px solid #333;
     }
 
     footer {
-      margin-top: auto;
       text-align: center;
       font-size: 0.9em;
       color: #666;
@@ -65,19 +79,21 @@
 <body>
   <header>
     <h1>My Game: Project Echo</h1>
-    <p>A game developed in my Game Engine Architecture class. Built from scratch using C++ and Godot's GDExtension system.</p>
+    <p>
+      A game developed in my Game Engine Architecture class. Built from scratch using C++ and a version of the raylib-cpp library. This game is from AS4 where we were tasked with creating a custom AD Hoc Game where I chose to make a game similar to Mario Kart. Initially I wanted the cars to detect the plane/surface they were driving on to determine the speed effects given to the respective car (speed boosts/speed reduction) depending on the object/color ran into. Instead, I made it so the vehicles detect collision with a tire (speed boost) or a cone (speed reduction) to make the game a little more interesting.
+    </p>
   </header>
 
   <div class="game-container">
-    <!-- Embed game or video here -->
-    <!-- Example: video demo -->
     <video controls poster="thumbnail.jpg">
       <source src="gameplay.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
+  </div>
 
-    <!-- OR if it's a web build -->
-    <!-- <iframe src="game/index.html"></iframe> -->
+  <div class="screenshots">
+    <img src="screenshot1.jpg" alt="Screenshot of gameplay" />
+    <img src="screenshot2.jpg" alt="Code snippet or another game feature" />
   </div>
 
   <footer>
