--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
 
   <div class="game-container">
     <video controls poster="thumbnail.jpg">
-      <source src="gameVideo" type="video/mp4" />
+      <source src="gameVideo.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
 
   <div class="screenshots">
-    <img src="asciiArt" alt="Terminal Art" />
-    <img src="codeExample" alt="Code snippet of object collision" />
+    <img src="asciiArt.jpg" alt="Terminal Art" />
+    <img src="codeExample.jpg" alt="Code snippet of object collision" />
   </div>
 
   <footer>
