--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
     </p>
   </header>
 
-  <div class="game-container">
+<!--   <div class="game-container">
     <video controls poster="thumbnail.jpg">
       <source src="gameVideo.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
-  </div>
+  </div> -->
 
   <div class="screenshots">
     <img src="asciiArt.jpg" alt="Terminal Art" />
