--- a/index.html
+++ b/index.html
@@ -84,12 +84,9 @@
     </p>
   </header>
 
-<!--   <div class="game-container">
-    <video controls poster="thumbnail.jpg">
-      <source src="gameVideo.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-  </div> -->
+<div class="game-container">
+    <iframe src="https://www.youtube.com/embed/Y_Dl6Zp1dNE" allowfullscreen></iframe>
+  </div>
 
   <div class="screenshots">
     <img src="asciiArt.jpg" alt="Terminal Art" />
