--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
     <iframe src="https://www.youtube.com/embed/Y_Dl6Zp1dNE" allowfullscreen></iframe>
   </div>
 
-  <div class="screenshots">
+<!--   <div class="screenshots">
     <img src="asciiArt.jpg" alt="Terminal Art" />
     <img src="codeExample.jpg" alt="Code snippet of object collision" />
-  </div>
+  </div> -->
 
   <footer>
     &copy; 2025 Bohdi. Class project for CS381.
