--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     </p>
   </header>
 
-<div class="game-container">
+<!-- <div class="game-container">
     <iframe src="https://www.youtube.com/embed/Y_Dl6Zp1dNE" allowfullscreen></iframe>
-  </div>
+  </div> -->
 
 <!--   <div class="screenshots">
     <img src="asciiArt.jpg" alt="Terminal Art" />
