--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="screenshot-caption">ASCII art from game</div>
     </div>
     <div class="screenshot">
-      <img src="codePicture.jpg" alt="Code example" />
+      <img src="codeExample.jpg" alt="Code example" />
       <div class="screenshot-caption">Code example</div>
     </div>
   </div>
