--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
     <div class="screenshot">
       <img src="codeExample.jpg" alt="Collision Code" />
-      <div class="screenshot-caption">Code example</div>
+      <div class="screenshot-caption">Collision Code</div>
     </div>
   </div>
 
