--- a/index.html
+++ b/index.html
@@ -92,20 +92,24 @@
     <p>
       A game developed in my Game Engine Architecture class. Built from scratch using C++ and a version of the raylib-cpp library. This game is from AS4 where we were tasked with creating a custom AD Hoc Game where I chose to make a game similar to Mario Kart. Initially I wanted the cars to detect the plane/surface they were driving on to determine the speed effects given to the respective car (speed boosts/speed reduction) depending on the object/color ran into. Instead, I made it so the vehicles detect collision with a tire (speed boost) or a cone (speed reduction) to make the game a little more interesting.
     </p>
-    <p> - W Key: Move the truck forward with increasing it's speed.
+    <p> 
+- W Key: Move the truck forward with increasing it's speed.
 - S Key: Slow the truck down with decreasing it's speed.
 - A Key: Turn the truck left.
 - D Key: Turn the truck right.
 - Spacebar: Stop the truck completely until W is pressed again.
-
+    </p>
+    <p>
 - UP Key: Move the truck forward with increasing it's speed.
 - DOWN Key: Slow the truck down with decreasing it's speed.
 - LEFT Key: Turn the truck left.
 - RIGHT Key: Turn the truck right.
 - Right Shift: Stop the truck completely until W is pressed again.
-
+    </p>
+    <p>
 - CONE COLLISION: Stops/slows the vehicle until it leaves the collsion box
-- TIRE COLLISION: Increases the vehicle speed for the effectDuration and then sets it back to normal max speed.</p>
+- TIRE COLLISION: Increases the vehicle speed for the effectDuration and then sets it back to normal max speed.
+    </p>
 
   </header>
   
